Release 1.1.0: responsive progress bar, new “Copy + archive” mode, UI tweaks
- Progress bar now updates live during sorting (runs on a SwingWorker).
- Added copy mode “Copy + move source to BAK” with the same date subfolders.
  - If a file already exists in BAK → skip and log a warning.
- UI: language switch persists; small layout polish; window position restore.
- Logs: show only errors and a short summary; optional auto-open after run.
- Internal: safer window position restore on multi-monitor setups.